--- a/templates/register.html
+++ b/templates/register.html
@@ -3,23 +3,28 @@
 <head>
     <title>Register</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Lily+Script+One&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h2>Register</h2>
+    <div class="form-container">
+        <div class="register-header">
+            <img src="{{ url_for('static', filename='logo transperant.png') }}" width="300" hieght="200">
+        </div>
+        
+        <h2>Register</h2>
 
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
             <p style="color: red;">{{ messages[0] }}</p>
-        {% endif %}
-    {% endwith %}
+            {% endif %}
+        {% endwith %}
 
-    <form method="POST">
-        <input type="text" name="username" placeholder="Username" required><br><br>
-        <input type="password" name="password" placeholder="Password" required><br><br>
-        <input type="password" name="confirm" placeholder="Confirm Password" required><br><br>
-        <button type="submit">Register</button>
-    </form>
+        <form method="POST">
+            <input type="text" name="username" placeholder="Username" required style="margin-left: -11px;"><br><br>
+            <input type="password" name="password" placeholder="Password" required style="margin-left: -11px;"><br><br>
+            <input type="password" name="confirm" placeholder="Confirm Password" required style="margin-left: -11px;"><br><br>
+            <button type="submit">Register</button>
+        </form>
 
     <p>Already have an account? <a href="{{ url_for('login') }}">Login here</a></p>
 </body>
