--- a/templates/main page.html
+++ b/templates/main page.html
@@ -1,9 +1,15 @@
-<!-- templates/main.html -->
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Login</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link href="https://fonts.googleapis.com/css2?family=Lily+Script+One&display=swap" rel="stylesheet">
+<head>
+<body>
+  <div>
+    <img src="{{ url_for('static', filename='logo shorten transperant.png') }}" class="roatate_90cw" >
+  <div>
 
-{% block title %}Main Page{% endblock %}
-
-{% block content %}
-  <h1>Welcome to the Main Page!</h1>
-  <p>You are now logged in.</p>
-{% endblock %}
+<div>
+  <img src="{{ url_for('static', filename='blankpfp-transperant.png') }}" >
+</div>
