--- a/templates/register.html
+++ b/templates/register.html
@@ -23,7 +23,7 @@
             <input type="text" name="username" placeholder="Username" required style="margin-left: -11px;"><br><br>
             <input type="password" name="password" placeholder="Password" required style="margin-left: -11px;"><br><br>
             <input type="password" name="confirm" placeholder="Confirm Password" required style="margin-left: -11px;"><br><br>
-            <button type="submit">Register</button>
+            <input type="submit" value="Register" class="button-type-1"> 
         </form>
 
     <p>Already have an account? <a href="{{ url_for('login') }}">Login here</a></p>
