--- a/templates/main page.html
+++ b/templates/main page.html
@@ -10,6 +10,10 @@
     <img src="{{ url_for('static', filename='logo shorten transperant.png') }}" class="roatate_90cw" >
   <div>
 
-<div>
-  <img src="{{ url_for('static', filename='blankpfp-transperant.png') }}" >
-</div>
+  <div>
+    <img src="{{ url_for('static', filename='blankpfp-transperant.png') }}" >
+  </div>
+
+  
+
+</body>
