added username to main page

--- a/templates/main page.html
+++ b/templates/main page.html
@@ -13,7 +13,9 @@
   <div>
     <img src="{{ url_for('static', filename='blankpfp-transperant.png') }}" >
   </div>
-
+  
+  <div>
+    <h2> welcome {{username}} </h2>
   
 
 </body>
