--- a/templates/main page.html
+++ b/templates/main page.html
@@ -7,7 +7,7 @@
 <head>
 <body>
   <div>
-    <img src="{{ url_for('static', filename='logo shorten transperant.png') }}" class="roatate_90cw" >
+    <img src="{{ url_for('static', filename='logo shorten transperant.png') }}" class="logo-mini">
   <div>
 
   <div>
