--- a/templates/main page.html
+++ b/templates/main page.html
@@ -11,7 +11,7 @@
   <div>
 
   <div>
-    <img src="{{ url_for('static', filename='blankpfp-transperant.png') }} " class='boarderthing' >
+    <img src="{{ url_for('static', filename='blankpfp-transperant.png') }} " class='pfp' >
   </div>
   
   <div>
