--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Lily+Script+One&display=swap" rel="stylesheet">
 </head>
-<body>
+<body  class="login-page">
     <div class="form-container">
         <div class="login-header">
             <img src="{{ url_for('static', filename='logo transperant.png') }}" class="scaled-image1" required style="margin-left: -11px;">
