--- a/templates/upload.html
+++ b/templates/upload.html
@@ -23,6 +23,11 @@
                 </label>
             </div>
 
+             <!-- Preview -->
+             <div class="preview" id="preview">
+                <img id="previewImg" src="" alt="Image Preview">
+            </div>
+
             <!-- Privacy Options -->
             <div class="upload-options">
                 <h2>Upload options</h2>
@@ -35,13 +40,32 @@
                     </label>
                 </div>
             </div>
-
+            
             <!-- Submit Button -->
             <div class="upload-submit">
                 <button type="submit">Upload</button>
             </div>
         </form>
     </div>
+    <!--java script for preview-->
+      <script>
+        const fileInput = document.getElementById('fileInput');
+        const preview = document.getElementById('preview');
+        const previewImg = document.getElementById('previewImg');
 
+        fileInput.addEventListener('change', function () {
+            const file = this.files[0];
+            if (file) {
+                preview.style.display = 'block';
+                const reader = new FileReader();
+                reader.onload = function (e) {
+                    previewImg.src = e.target.result;
+                };
+                reader.readAsDataURL(file);
+            } else {
+                preview.style.display = 'none';
+            }
+        });
+    </script>
 </body>
 </html>
