--- a/templates/upload.html
+++ b/templates/upload.html
@@ -9,7 +9,14 @@
 </head>
 <body>
 
-    
+    <!-- Top Right Logo -->
+  <header class="top-logo">
+    <a href="{{ url_for('main') }}">
+      <img src="{{ url_for('static', filename='logo_shorten_transperant.png') }}" class="logo-mini" alt="Site Logo">
+    </a>
+  </header>
+  
+    <h2 class="section-title">Upload</h2>
 
     <!-- Upload Container -->
     <div class="upload-container">
