--- a/static/style.css
+++ b/static/style.css
@@ -3,7 +3,7 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
-    background-image: url('background_red.jpg');
+    background-image: url("background_red.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
