--- a/templates/upload.html
+++ b/templates/upload.html
@@ -26,7 +26,7 @@
                 <input type="file" id="fileInput" name="image" hidden required>
                 <label for="fileInput" class="file-label">
                     <div class="upload-symbol">⬆</div>
-                    <p><u>Choose a file</u></p>
+                    <p><u>Choose a file [only png, jpg, jpeg, gif]</u></p>
                 </label>
             </div>
 
